@@ -20,4 +20,5 @@
 	- verified regex matches for 0 - 1 'l' characters and fails if there are more
 	- verified regex matches for 0 - 3 'c' characters and fails if there are more
 	- verified regex matches for 0 - 1 'd' characters and fails if there are more
+	- verified regex matches for 0 - n 'm' characters
 	
